# kangaroo

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt
browser/: CMakeLists.txt  app.cc  app.gtk.cc  app.win.cc  main.cc  main.gtk.cc  main.win.cc  main_window.cc
cmake/: cef.cmake  features.cmake  features.h  features.hh  functions.cmake
helper/: CMakeLists.txt  helper.cc  helper.gtk.cc  helper.win.cc
include/kg/: app.hh  main_window.hh  webview.hh
include/kg/browser/: app.hh  main_window.hh
include/kg/util/: bridge.hh  child.hh  defines.hh  log.hh
include/kg/webview/: cef_client.hh  cef_handle.hh  webview.hh
include/wx/: _wrapper.hh  ptr.hh
resources/: kangaroo.manifest
sandbox/: CMakeLists.txt  sandbox.cc
src/: CMakeLists.txt  app.cc  main.cc  main_window.cc
util/: CMakeLists.txt  defines.cc  log.cc  log.gtk.cc  log.win.cc
webview/: CMakeLists.txt  cef_client.cc  cef_handle.cc  webview.cc  webview.gtk.cc  webview.win.cc
